--- a/cvrg-timeseriesstore/pom.xml
+++ b/cvrg-timeseriesstore/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>edu.cvrg</groupId>
 	<artifactId>cvrg-timeseriesstore</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>cvrg-timeseriesstore</name>
@@ -42,21 +42,6 @@
 			<version>3.10.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cvrgrid.schiller</groupId>
-			<artifactId>schiller-data</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.sierraecg</groupId>
-			<artifactId>jsierraecg</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cvrgrid.philips</groupId>
-			<artifactId>Phlilips1.04</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -67,9 +52,9 @@
 			<version>4.4</version>
 		</dependency>
 		<dependency>
-			<groupId>edu.jhu.icm</groupId>
-			<artifactId>ECG_Converter4</artifactId>
-			<version>1.1-SNAPSHOT</version>
+  			<groupId>edu.jhu.icm</groupId>
+  			<artifactId>cvrg-ecg-converter</artifactId>
+  			<version>1.5.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
@@ -104,7 +89,7 @@
 		<dependency>
 			<groupId>edu.jhu.cvrg</groupId>
 			<artifactId>cvrg-opentsdb-client</artifactId>
-			<version>0.7.0-SNAPSHOT</version>
+			<version>0.7.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -117,7 +102,22 @@
 			<name>3rd Party</name>
 			<url>http://128.220.76.138:8081/nexus/content/repositories/thirdparty/</url>
 		</repository>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>snapshots</id>
+			<name>Snapshots</name>
+			<url>http://128.220.76.138:8081/nexus/content/repositories/snapshots/</url>
+		</repository>
 	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>nexus-snapshots</id>
+			<name>Snapshots</name>
+			<url>http://128.220.76.138:8081/nexus/content/repositories/snapshots/</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<pluginManagement>
 			<plugins>
